# EchoMusic

./: .env.development  .env.production  .gitignore  .gitmodules  .prettierrc  AppImageBuilder.yml  CHANGELOG.md  README.md  THIRD-PARTY-NOTICES.md  THIRD_PARTY_NOTICES.md  desktop-lyric.html  electronmon.json  eslint.config.js  eslint.config.mjs  generate_app_icon.py  generate_tile_icons.py  index.html  installer.iss  loading.html  package-lock.json  package.json  plugin-window.html  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  tsconfig.electron.json  tsconfig.json  vite.config.mts  vite.config.ts
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  issue-ai-labeler.yml  issue-closer.yml  release.yml
EchoMusic/: AppDelegate.swift  ContentView.swift  EchoMusicApp.swift  Persistence.swift
EchoMusic.xcodeproj/: project.pbxproj
EchoMusic/EchoMusic.xcdatamodeld/: .xccurrentversion
EchoMusic/Model/: EchoMusicError.swift  History.swift  Library.swift  Login.swift  Navigation.swift  Player.swift  Search.swift  Song.swift  User.swift
EchoMusic/Service/: AppSettingService.swift  LibraryService.swift  LoginService.swift  MusicService.swift  NetworkService.swift  PlayerService.swift  PlaylistService.swift  SearchService.swift  UserService.swift
EchoMusic/Utility/: DateHelper.swift  ImageURLHelper.swift  LenientDecoding.swift  SubPageNavigationManager.swift
EchoMusic/View/: CloudMusicView.swift  DiscoverView.swift  FavoriteMusicView.swift  HomeView.swift  LibraryView.swift  LoginView.swift  MainView.swift  PlaylistView.swift  RecentMusicView.swift  SearchResultsView.swift  SettingsView.swift  UserProfileView.swift
EchoMusicTests/: AlbumSearchTest.swift  ArtistSearchTest.swift  CustomSearchViewSimpleTests.swift  EchoMusicTests.swift  PlaylistSearchTest.swift
EchoMusicUITests/: EchoMusicUITests.swift  EchoMusicUITestsLaunchTests.swift
app/icons/: icon.icns  preview.html
docs/: .nojekyll  architecture-evolution.md  custom-background-transparency-fix.md  mpv-player-engine-design.md  native-media-controls-design.md  plugin-windows.md
electron/: main.ts
lib/: main.dart
linux/: CMakeLists.txt
native/echo-ffmpeg-player/: .gitignore  Cargo.toml  build.rs  index.d.ts  package.json  pnpm-lock.yaml
native/echo-ffmpeg-player/.cargo/: config.toml
native/echo-ffmpeg-player/src/: audio.rs  audio_graph.rs  config.rs  decode.rs  decoder.rs  device.rs  dispatcher.rs  dsp.rs  effects.rs  error.rs  events.rs  exclusive.rs  filter.rs  http_range.rs  lib.rs  log.rs  network_stream.rs  player.rs  shared.rs  spectrum.rs  tempo.rs  types.rs
native/echo-ffmpeg-player/src/device/: mod.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs  selection.rs  watcher.rs
native/echo-ffmpeg-player/src/output/: alsa_exclusive.rs  coreaudio_exclusive.rs  cpal_shared.rs  mod.rs  wasapi.rs  wasapi_exclusive.rs
native/echo-ffmpeg-player/src/shared/: decoded_queue.rs  realtime_ring.rs  session.rs  types.rs
native/echo-ffmpeg-player/src/stream/: file.rs  http.rs  mod.rs  url.rs
native/echo-media-controls/: Cargo.toml  index.d.ts  package-lock.json  package.json
native/echo-media-controls/src/: lib.rs  model.rs  taskbar.rs
native/echo-media-controls/src/sys_media/: linux.rs  macos.rs  mod.rs  windows.rs
native/echo-mpv-player/: Cargo.toml  index.d.ts  package-lock.json  package.json
native/echo-mpv-player/src/: event_loop.rs  lib.rs  mpv_ffi.rs  player.rs  spectrum.rs  types.rs
native/echo-mpv-player/src/audio/: eq.rs  filter_chain.rs  mod.rs  spatial.rs
native/echo-spectrum-capture/: Cargo.toml  build.rs  index.d.ts  package-lock.json  package.json
native/echo-spectrum-capture/.cargo/: config.toml
native/echo-spectrum-capture/src/: backend.rs  dsp.rs  lib.rs  types.rs
native/echo-spectrum-capture/src/backend/: macos_sck.rs
native/echo-sqlite-store/: Cargo.toml  index.d.ts  package-lock.json  package.json
native/echo-sqlite-store/.cargo/: config.toml
native/echo-sqlite-store/src/: lib.rs
public/: desktop-lyrics.html
scripts/: README.md  build.sh  dev.sh  gen-tray-icons.js  generate-icons.js
src/: App.vue  main.ts  vue-shims.d.ts
test/: app_shortcuts_test.dart  logger_service_test.dart  music_api_backend_test.dart  music_api_transport_test.dart  music_runtime_startup_test.dart  widget_test.dart
windows/: CMakeLists.txt
(+608 files in other folders)
