[package]
name = "echo-media-controls"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["tokio_rt", "napi9"] }
napi-derive = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[build-dependencies]
napi-build = "2"

# Windows: WinRT SMTC
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = ["Media_Playback", "Storage_Streams"]

# Linux: MPRIS D-Bus
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9"
tempfile = "3"

# macOS: MPNowPlayingInfoCenter
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-media-player = "0.3"
objc2-app-kit = "0.3"
