[package]
name = "echo-mpv-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"
libloading = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "namedpipeapi"] }

[build-dependencies]
napi-build = "2"
