[package]
name = "echo-spectrum-capture"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"
rustfft = "6.4.1"

[build-dependencies]
napi-build = "2"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
cpal = "0.15.3"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
dispatch2 = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSError", "NSString"] }
