[package]
name = "echo-sqlite-store"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
